# duckmem

./: .env.example  .gitignore  LICENSE  README.md  fastmcp.json  pyproject.toml
docs/: ARCHITECTURE-DIAGRAM.md  cli.md  configuration.md  guide.md  index.md  installation.md  mcp-server.md  rest-api.md
duckmem/: __init__.py  agents.py  api.py  cli.py  config.py  core.py  inference.py  mcp_server.py  models.py  schema.py  utils.py
duckmem/ingestion/: __init__.py  chunkers.py
examples/: 01_basic_usage.py  02_documents_and_namespaces.py  03_knowledge_graph.py  04_rag_qa.py  05_sessions.py  06_complete_workflow.py  README.md
tests/: __init__.py  conftest.py  test_chunkers.py  test_core.py  test_mcp_client.py  test_models.py  test_rest_api.py  test_utils.py
