[project]
name = "duckmem"
version = "0.1.0"
description = "A DuckDB-based personal knowledge memory system with hybrid search, knowledge graph, and RAG"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kautella Consulting" }]
keywords = ["duckdb", "knowledge-base", "rag", "vector-search", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "duckdb>=1.1.0",
    "litellm>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai>=0.0.30",
    "pydantic-ai-litellm>=0.2.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "fastmcp>=3.0",
    "mcp[cli]>=1.0",
    "cryptography>=41.0",
    "typer-slim>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/kautella-consulting/duckmem"
Repository = "https://github.com/kautella-consulting/duckmem"
Issues = "https://github.com/kautella-consulting/duckmem/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
    "pyright>=1.1",
]

[project.scripts]
duckmem = "duckmem.cli:main"
duckmem-mcp = "duckmem.mcp_server:main"
# Wrapper for MCP CLI (install, run, dev) - package entry point may not install with mcp[cli]
mcp = "mcp.cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["D103"]
"tests/*.py" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
